--- a/Exercise 1/tutorial_classification.ipynb
+++ b/Exercise 1/tutorial_classification.ipynb
@@ -17,7 +17,7 @@
       "source": [
         "Before you start to solve the exercise, please write your TUM-IDs alongside the names of all group members. This will enable us to assign grades accurately. Thank you.\n",
         "\n",
-        "Member 1:\n",
+        "Member 1: Doan Xuan Viet, Pham; 03698056\n",
         "\n",
         "Member 2:\n",
         "\n",
