--- a/Exercise 1/tutorial_classification.ipynb
+++ b/Exercise 1/tutorial_classification.ipynb
@@ -21,7 +21,7 @@
         "\n",
         "Member 2:\n",
         "\n",
-        "Member 3:\n",
+        "Member 3: Jehkul Janik, 03781262\n",
         "\n",
         "..."
       ]
