Readded MatrNrs, removed prints, install monai

--- a/Exercise2/segmentation_main_03698056_03723706_03781262.ipynb
+++ b/Exercise2/segmentation_main_03698056_03723706_03781262.ipynb
@@ -21,7 +21,15 @@
       "metadata": {
         "id": "MJNKPlBOQx3K"
       },
-      "source": []
+      "source": [
+        "Before you start to solve the exercise, please write your TUM-IDs alongside the names of all group members. This will enable us to assign grades accurately. Thank you.\n",
+        "\n",
+        "Member 1: Pham, Doan Xuan Viet; 03698056\n",
+        "\n",
+        "Member 2: Schulz, Julien; 03723706\n",
+        "\n",
+        "Member 3: Jehkul, Janik; 03781262"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -68,7 +76,8 @@
         "! wget -q --show-progress https://www.dropbox.com/s/w9njau9t6rrheel/brainage-data.zip\n",
         "! unzip -qq -o brainage-data.zip\n",
         "! wget -q --show-progress https://www.dropbox.com/s/f5mt8p9pkszff3x/brainage-testdata.zip\n",
-        "! unzip -qq -o brainage-testdata.zip\n"
+        "! unzip -qq -o brainage-testdata.zip\n",
+        "! pip install monai"
       ]
     },
     {
@@ -990,13 +999,7 @@
         "\n",
         "gmm.fit(flat_images[:batch_size])\n",
         "for i in range(batch_size, len(flat_images), batch_size):\n",
-        "  print(\"Initial weights: \", gmm.weights_)\n",
-        "  print(\"Initial means: \", gmm.means_)\n",
-        "  print(\"Initial covariances: \", gmm.covariances_)\n",
         "  gmm.fit(flat_images[i:i+batch_size])\n",
-        "  print(\"Post weights: \", gmm.weights_)\n",
-        "  print(\"Post means: \", gmm.means_)\n",
-        "  print(\"Post covariances: \", gmm.covariances_)\n",
         "\n",
         "# Initialize an empty list to store the cluster assignments\n",
         "cluster_assignments = []\n",
