--- a/Exercise 3/transferlearning.ipynb
+++ b/Exercise 3/transferlearning.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " Before you start to solve the exercise, please write your TUM-IDs alongside the names of all group members. This will enable us to assign grades accurately. Thank you.\n",
+    " \n",
+    " Member 1: Pham, Doan Xuan Viet; 03698056\n",
+    "\n",
+    " Member 2: Schulz, Julien; 03723706\n",
+    " \n",
+    " Member 3: Jehkul, Janik; 03781262"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
