Added data distribution to 1.(a)2.

--- a/Exercise 3/transferlearning.ipynb
+++ b/Exercise 3/transferlearning.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -203,294 +203,287 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/5 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 45.84it/s]\n"
+      "100%|██████████| 5/5 [00:09<00:00,  1.89s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 1\tLoss: 0.7279\n"
+      "Epoch: 1\tLoss: 0.7813\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 49.82it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 53.79it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 2\tLoss: 0.6360\n"
+      "Epoch: 2\tLoss: 0.6449\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 54.10it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 52.73it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 3\tLoss: 0.5562\n"
+      "Epoch: 3\tLoss: 0.5437\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 58.00it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 48.08it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 4\tLoss: 0.4940\n"
+      "Epoch: 4\tLoss: 0.4803\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 52.79it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 56.35it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 5\tLoss: 0.4345\n"
+      "Epoch: 5\tLoss: 0.4285\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 54.09it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 58.81it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 6\tLoss: 0.3863\n"
+      "Epoch: 6\tLoss: 0.3753\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 56.13it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 58.53it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 7\tLoss: 0.3505\n"
+      "Epoch: 7\tLoss: 0.3374\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 54.59it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 53.13it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 8\tLoss: 0.3145\n"
+      "Epoch: 8\tLoss: 0.2959\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 55.56it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 46.06it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 9\tLoss: 0.2730\n"
+      "Epoch: 9\tLoss: 0.2639\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 59.73it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 58.07it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 10\tLoss: 0.2428\n"
+      "Epoch: 10\tLoss: 0.2410\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 55.37it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 58.81it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 11\tLoss: 0.2174\n"
+      "Epoch: 11\tLoss: 0.2133\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 53.74it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 63.71it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 12\tLoss: 0.2011\n"
+      "Epoch: 12\tLoss: 0.1920\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 53.11it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 55.23it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 13\tLoss: 0.1715\n"
+      "Epoch: 13\tLoss: 0.1697\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 54.59it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 54.61it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 14\tLoss: 0.1558\n"
+      "Epoch: 14\tLoss: 0.1544\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 54.27it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 54.33it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 15\tLoss: 0.1384\n"
+      "Epoch: 15\tLoss: 0.1330\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 57.81it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 54.96it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 16\tLoss: 0.1240\n"
+      "Epoch: 16\tLoss: 0.1228\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 56.50it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 63.04it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 17\tLoss: 0.1152\n"
+      "Epoch: 17\tLoss: 0.1149\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 52.79it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 57.22it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 18\tLoss: 0.1056\n"
+      "Epoch: 18\tLoss: 0.1001\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 51.47it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 52.45it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 19\tLoss: 0.0922\n"
+      "Epoch: 19\tLoss: 0.0941\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 52.98it/s]"
+      "100%|██████████| 5/5 [00:00<00:00, 54.43it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 20\tLoss: 0.0831\n"
+      "Epoch: 20\tLoss: 0.0847\n"
      ]
     },
     {
@@ -562,12 +555,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0 1 0 1 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 1 0 0 0 1 1 0 1 0 0 0]\n",
+      "[0 0 0 0 0 0 0 1 0 0 0 0 0 0]\n",
+      "[0 0 1 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 1 0 0 0 0 0 0 0 0]\n",
+      "[0 1 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 1 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 1 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[1 0 0 0 0 0 0 0 0 0 1 0 0 0]\n",
+      "[1 0 0 0 0 0 0 1 0 0 0 0 0 0]\n",
+      "[0 0 1 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 1 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[1 0 0 0 0 0 0 0 1 0 0 0 0 0]\n",
+      "[0 0 0 0 0 0 0 0 1 0 0 0 0 0]\n",
+      "[1 0 0 1 0 0 1 0 0 0 0 0 0 0]\n",
+      "[1 0 1 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 0 0 0 0 0 1 0 0 0]\n",
+      "[0 0 1 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 1 0 1 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 0 0 1 0 0 1 0 0 0]\n",
+      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 1 0 0 0 0 1 0 0 0 0 0]\n",
+      "[0 0 1 1 1 0 0 0 1 0 0 0 0 0]\n",
+      "[1 0 1 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 1 0 0 0 0 0 0 0 0 0]\n",
+      "[0 1 1 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 1 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[1 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 1 0 0 0 0 0 0 0 0]\n",
+      "[1 0 1 1 1 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 1 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[1 0 1 0 1 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 1 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 0 0 0 0 0 0 0 1 0]\n",
+      "[1 0 1 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 0 0 0 1 0 0 0 0 0]\n",
+      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[1 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 1 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 1 1 0 0 0 0 0 1 0 0 0 0]\n",
+      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[1 0 1 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 1 0 1 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 1 0 1 1 0 0 0 0 0 0 0]\n",
+      "[1 0 0 0 0 0 0 0 0 0 1 0 0 0]\n",
+      "[0 0 0 0 1 1 0 0 0 0 0 0 0 0]\n",
+      "[1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 1 0 0 0 0 0 1 0 0 0 0]\n",
+      "[0 0 0 0 0 1 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 1 0 0 1 0 0 1 0 0 0]\n",
+      "[0 1 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 1 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 1 0 0 1 0 0 0 0 0 0]\n",
+      "[1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 1 1 0 0 0 0 1 0 0 0]\n",
+      "[0 0 1 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 1 0 0 0 0 0 0 1 0 0 0]\n",
+      "[1 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 1 0 0 0 0 0 1 0 0 0 0 0]\n",
+      "[0 0 1 0 0 0 0 0 0 0 0 0 1 0]\n",
+      "[0 0 1 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[1 0 0 0 0 0 0 1 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 0 0 1 0 0 0 0 0 0]\n",
+      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 0 0 0 1 0 0 0 0 0]\n",
+      "[1 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 1 0 0 0 0 0 0 0 0 0 1 0]\n",
+      "[0 0 0 1 0 0 0 0 0 1 0 0 0 0]\n",
+      "[1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 1 0 0 0 0 0 0 0 0]\n",
+      "[0 0 1 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 1 0 0 1 0 0 0 0 0 0 0]\n",
+      "[0 0 1 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 1 0 0 0 0 0 0 0 1 0 0 0 0]\n",
+      "[1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 1 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 0 0 0 0 0 1 0 0 0]\n",
+      "[0 0 0 0 1 0 0 0 0 0 1 0 1 0]\n",
+      "[0 0 0 0 1 1 0 0 0 0 0 0 0 0]\n",
+      "[1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[1 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 0 1 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 0 0 1 0 0 0 0 0 0]\n",
+      "[0 0 1 0 1 0 0 1 0 0 1 0 0 0]\n",
+      "[0 0 0 0 0 0 0 0 0 0 1 0 0 0]\n",
+      "[0 0 0 0 0 0 0 1 0 0 0 0 0 0]\n",
+      "[0 0 1 0 0 1 0 1 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 0 0 0 0 0 1 0 0 0]\n",
+      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 0 0 0 1 0 0 0 0 0]\n",
+      "[0 0 0 0 0 0 0 0 1 0 0 0 0 0]\n",
+      "[0 0 0 0 0 0 0 1 0 0 0 0 0 0]\n",
+      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 0 0 0 1 0 0 0 0 0]\n",
+      "[1 0 0 0 1 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 0 0 0 0 0 0 1 0 0]\n",
+      "[0 0 0 0 0 0 1 0 0 0 0 0 0 0]\n",
+      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 1 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 1 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 0 0 0 1 0 0 0 0 0]\n",
+      "[0 0 1 0 0 0 0 1 0 0 0 0 0 0]\n",
+      "[0 0 0 1 0 1 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 1 0 1 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 1 0 1 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 1 0 0 0 0 0 0 0 1 0 0]\n",
+      "[0 0 0 0 1 0 0 0 0 0 0 0 0 0]\n",
+      "[1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 1 0 0 0 0 1 0 0 1 0 0 0]\n",
+      "[1 0 1 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 1 1 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 1 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 1 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 1 0 0 1 0 0 0 0 0 0 0 0]\n",
+      "[0 0 1 0 0 0 0 0 1 0 0 0 0 0]\n",
+      "[1 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 1 1 1 0 0 0 0 0 0 0 1 0]\n"
+     ]
+    }
+   ],
    "source": [
     "# Examine the data distribution of the binary classification task. Is accuracy a good metric?\n",
-    "# Since the positive rate is very high the training dataset "
+    "# Since the positive rate is very high the training dataset \n",
+    "\n",
+    "#print(torch.any(torch.tensor(train_dataset_chest.labels) == 0, dim=1).sum())\n",
+    "#print(torch.any(torch.tensor(train_dataset_chest.labels) == 1, dim=1).sum())\n",
+    "count = 0\n",
+    "count2 = 0\n",
+    "\n",
+    "for i in train_dataset_chest.labels:\n",
+    "    if i.sum() > 0:\n",
+    "        print(i)\n",
+    "    else:\n",
+    "        print(i)\n",
+    "    "
    ]
   },
   {
