Added data distribution to 1.(a)2.

--- a/Exercise 3/transferlearning.ipynb
+++ b/Exercise 3/transferlearning.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
     "        balanced_acc = (positive_rate + negative_rate) / 2\n",
     "        print(\"Balanced accuracy: \", balanced_acc)\n",
     "        \n",
-    "        print('acc:%.3f \\n' % (acc))"
+    "        print('acc: %.3f \\n' % (acc))"
    ]
   },
   {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -203,287 +203,294 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:09<00:00,  1.89s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 1\tLoss: 0.7813\n"
+      "  0%|          | 0/5 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 53.79it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 48.97it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 2\tLoss: 0.6449\n"
+      "Epoch: 1\tLoss: 0.7924\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 52.73it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 47.79it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 3\tLoss: 0.5437\n"
+      "Epoch: 2\tLoss: 0.6815\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 48.08it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 54.14it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 4\tLoss: 0.4803\n"
+      "Epoch: 3\tLoss: 0.5856\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 56.35it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 35.86it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 5\tLoss: 0.4285\n"
+      "Epoch: 4\tLoss: 0.5059\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 58.81it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 57.31it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 6\tLoss: 0.3753\n"
+      "Epoch: 5\tLoss: 0.4805\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 58.53it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 48.29it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 7\tLoss: 0.3374\n"
+      "Epoch: 6\tLoss: 0.4228\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 53.13it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 62.63it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 8\tLoss: 0.2959\n"
+      "Epoch: 7\tLoss: 0.3868\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 46.06it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 52.37it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 9\tLoss: 0.2639\n"
+      "Epoch: 8\tLoss: 0.3480\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 58.07it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 61.47it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 10\tLoss: 0.2410\n"
+      "Epoch: 9\tLoss: 0.3202\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 58.81it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 47.52it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 11\tLoss: 0.2133\n"
+      "Epoch: 10\tLoss: 0.2842\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 63.71it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 59.07it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 12\tLoss: 0.1920\n"
+      "Epoch: 11\tLoss: 0.2557\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 55.23it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 58.75it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 13\tLoss: 0.1697\n"
+      "Epoch: 12\tLoss: 0.2372\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 54.61it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 49.30it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 14\tLoss: 0.1544\n"
+      "Epoch: 13\tLoss: 0.2145\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 54.33it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 59.99it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 15\tLoss: 0.1330\n"
+      "Epoch: 14\tLoss: 0.1914\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 54.96it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 51.57it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 16\tLoss: 0.1228\n"
+      "Epoch: 15\tLoss: 0.1719\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 63.04it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 50.99it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 17\tLoss: 0.1149\n"
+      "Epoch: 16\tLoss: 0.1560\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 57.22it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 43.21it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 18\tLoss: 0.1001\n"
+      "Epoch: 17\tLoss: 0.1459\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 52.45it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 48.47it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 19\tLoss: 0.0941\n"
+      "Epoch: 18\tLoss: 0.1295\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 54.43it/s]"
+      "100%|██████████| 5/5 [00:00<00:00, 58.79it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 20\tLoss: 0.0847\n"
+      "Epoch: 19\tLoss: 0.1145\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5/5 [00:00<00:00, 54.35it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 20\tLoss: 0.1054\n"
      ]
     },
     {
@@ -555,170 +562,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 0 0 1 0 1 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 1 0 0 0 1 1 0 1 0 0 0]\n",
-      "[0 0 0 0 0 0 0 1 0 0 0 0 0 0]\n",
-      "[0 0 1 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 0 0 1 0 0 0 0 0 0 0 0]\n",
-      "[0 1 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 0 0 1 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 0 0 1 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[1 0 0 0 0 0 0 0 0 0 1 0 0 0]\n",
-      "[1 0 0 0 0 0 0 1 0 0 0 0 0 0]\n",
-      "[0 0 1 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      "[1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 1 0 0 0 0 0 0 0 0 0 0 0]\n",
-      "[1 0 0 0 0 0 0 0 1 0 0 0 0 0]\n",
-      "[0 0 0 0 0 0 0 0 1 0 0 0 0 0]\n",
-      "[1 0 0 1 0 0 1 0 0 0 0 0 0 0]\n",
-      "[1 0 1 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 0 0 0 0 0 0 0 1 0 0 0]\n",
-      "[0 0 1 0 0 0 0 0 0 0 0 0 0 0]\n",
-      "[1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 1 0 1 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 0 0 0 0 1 0 0 1 0 0 0]\n",
-      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 1 0 0 0 0 1 0 0 0 0 0]\n",
-      "[0 0 1 1 1 0 0 0 1 0 0 0 0 0]\n",
-      "[1 0 1 0 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 0 1 0 0 0 0 0 0 0 0 0]\n",
-      "[0 1 1 0 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 1 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      "[1 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 0 0 1 0 0 0 0 0 0 0 0]\n",
-      "[1 0 1 1 1 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 1 0 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[1 0 1 0 1 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 0 1 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 0 0 0 0 0 0 0 0 0 1 0]\n",
-      "[1 0 1 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 0 0 0 0 0 1 0 0 0 0 0]\n",
-      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[1 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 1 0 0 0 0 0 0 0 0 0 0 0]\n",
-      "[1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 1 1 0 0 0 0 0 1 0 0 0 0]\n",
-      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[1 0 1 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 1 0 1 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 1 0 1 1 0 0 0 0 0 0 0]\n",
-      "[1 0 0 0 0 0 0 0 0 0 1 0 0 0]\n",
-      "[0 0 0 0 1 1 0 0 0 0 0 0 0 0]\n",
-      "[1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 1 0 0 0 0 0 1 0 0 0 0]\n",
-      "[0 0 0 0 0 1 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 0 1 0 0 1 0 0 1 0 0 0]\n",
-      "[0 1 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 0 0 1 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 0 1 0 0 1 0 0 0 0 0 0]\n",
-      "[1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 0 1 1 0 0 0 0 1 0 0 0]\n",
-      "[0 0 1 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 1 0 0 0 0 0 0 1 0 0 0]\n",
-      "[1 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 1 0 0 0 0 0 1 0 0 0 0 0]\n",
-      "[0 0 1 0 0 0 0 0 0 0 0 0 1 0]\n",
-      "[0 0 1 0 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[1 0 0 0 0 0 0 1 0 0 0 0 0 0]\n",
-      "[0 0 0 0 0 0 0 1 0 0 0 0 0 0]\n",
-      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 0 0 0 0 0 1 0 0 0 0 0]\n",
-      "[1 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 1 0 0 0 0 0 0 0 0 0 1 0]\n",
-      "[0 0 0 1 0 0 0 0 0 1 0 0 0 0]\n",
-      "[1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 0 0 1 0 0 0 0 0 0 0 0]\n",
-      "[0 0 1 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 1 0 0 1 0 0 0 0 0 0 0]\n",
-      "[0 0 1 0 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 1 0 0 0 0 0 0 0 1 0 0 0 0]\n",
-      "[1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 0 0 1 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 0 0 0 0 0 0 0 1 0 0 0]\n",
-      "[0 0 0 0 1 0 0 0 0 0 1 0 1 0]\n",
-      "[0 0 0 0 1 1 0 0 0 0 0 0 0 0]\n",
-      "[1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      "[1 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 0 0 0 1 0 0 0 0 0 0 0]\n",
-      "[0 0 0 0 0 0 0 1 0 0 0 0 0 0]\n",
-      "[0 0 1 0 1 0 0 1 0 0 1 0 0 0]\n",
-      "[0 0 0 0 0 0 0 0 0 0 1 0 0 0]\n",
-      "[0 0 0 0 0 0 0 1 0 0 0 0 0 0]\n",
-      "[0 0 1 0 0 1 0 1 0 0 0 0 0 0]\n",
-      "[0 0 0 0 0 0 0 0 0 0 1 0 0 0]\n",
-      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 0 0 0 0 0 1 0 0 0 0 0]\n",
-      "[0 0 0 0 0 0 0 0 1 0 0 0 0 0]\n",
-      "[0 0 0 0 0 0 0 1 0 0 0 0 0 0]\n",
-      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 0 0 0 0 0 1 0 0 0 0 0]\n",
-      "[1 0 0 0 1 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 0 0 0 0 0 0 0 0 1 0 0]\n",
-      "[0 0 0 0 0 0 1 0 0 0 0 0 0 0]\n",
-      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 0 1 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 1 0 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 0 0 0 0 0 1 0 0 0 0 0]\n",
-      "[0 0 1 0 0 0 0 1 0 0 0 0 0 0]\n",
-      "[0 0 0 1 0 1 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 1 0 1 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 1 0 1 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 1 0 0 0 0 0 0 0 1 0 0]\n",
-      "[0 0 0 0 1 0 0 0 0 0 0 0 0 0]\n",
-      "[1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      "[1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 1 0 0 0 0 1 0 0 1 0 0 0]\n",
-      "[1 0 1 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 0 1 1 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 0 1 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 1 0 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 1 0 0 1 0 0 0 0 0 0 0 0]\n",
-      "[0 0 1 0 0 0 0 0 1 0 0 0 0 0]\n",
-      "[1 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 1 1 1 0 0 0 0 0 0 0 1 0]\n"
+      "Positive in train: 134\n",
+      "Negative in train: 166\n",
+      "\n",
+      "Positive in test:  10505\n",
+      "Negative in test:  11928\n"
      ]
     }
    ],
    "source": [
     "# Examine the data distribution of the binary classification task. Is accuracy a good metric?\n",
-    "# Since the positive rate is very high the training dataset \n",
+    "print(\"Positive in train: \" + str(sum(i.sum() > 0 for i in train_dataset_chest.labels)))\n",
+    "print(\"Negative in train: \" + str(sum(i.sum() == 0 for i in train_dataset_chest.labels)) + \"\\n\")\n",
+    "print(\"Positive in test:  \" + str(sum(i.sum() > 0 for i in test_dataset_chest.labels)))\n",
+    "print(\"Negative in test:  \" + str(sum(i.sum() == 0 for i in test_dataset_chest.labels)))\n",
     "\n",
-    "#print(torch.any(torch.tensor(train_dataset_chest.labels) == 0, dim=1).sum())\n",
-    "#print(torch.any(torch.tensor(train_dataset_chest.labels) == 1, dim=1).sum())\n",
-    "count = 0\n",
-    "count2 = 0\n",
+    "# Positive in train: 134 Negative in train: 166\n",
+    "# Positive in test:  10505 Negative in test:  11928\n",
     "\n",
-    "for i in train_dataset_chest.labels:\n",
-    "    if i.sum() > 0:\n",
-    "        print(i)\n",
-    "    else:\n",
-    "        print(i)\n",
-    "    "
+    "# Answer in report."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -730,13 +604,13 @@
       "Positive rate:  1.0\n",
       "Negative rate:  1.0\n",
       "Balanced accuracy:  1.0\n",
-      "acc:1.000 \n",
+      "acc: 1.000 \n",
       "\n",
       "test\n",
-      "Positive rate:  0.4766301761066159\n",
-      "Negative rate:  0.659372904091214\n",
-      "Balanced accuracy:  0.5680015400989149\n",
-      "acc:0.574 \n",
+      "Positive rate:  0.5207044264635887\n",
+      "Negative rate:  0.6340543259557344\n",
+      "Balanced accuracy:  0.5773793762096615\n",
+      "acc: 0.581 \n",
       "\n"
      ]
     }
